# market-basket-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
notebooks/: Market_Basket_FP_Growth.ipynb
src/market_basket/: __init__.py  config.py  data_prep.py  mining.py  viz.py
